<resources>
    <string name="app_name">Run</string>

    <string name="title_activity_main">Main</string>
    <string name="title_activity_nextplan">nextplan</string>
    <string name="title_activity_indoor">indoor</string>
    <string name="title_activity_result">result</string>
    <string name="title_activity_history">history</string>
    <string name="title_activity_plan">plan</string>
    <string name="title_activity_splash">splash</string>
    <string name="menu_settings">设置</string>
    <string name="step_number">步\t数</string>
    <string name="use_time">用\t时</string>
    <string name="distance">行 程</string>
    <string name="calories">热 量</string>
    <string name="velocity">速 度</string>
    <string name="zero">0</string>
    <string name="double_zero">0.0</string>
    <string name="calories_zero">0.0</string>
    <string name="velocity_zero">0.0</string>
    <string name="km">m</string>
    <string name="calorie">卡路里</string>
    <string name="kilometer_per_hour">m/s</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="cancel">清零</string>
    <string name="daily">今日累积</string>
    <string name="image_star">image_star</string>
    <string name="sunday">星期天</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="month">月\t</string>
    <string name="day">日</string>
    <string name="todo">TODO</string>
    <string name="information">说明</string>
    <string name="settings_title">设置</string>
    <string name="sensitivity">灵敏度：</string>
    <string name="low">低</string>
    <string name="high">高</string>
    <string name="sensitivity_info">灵敏度越高,对身体的动作越敏感.请调节灵敏度来适应不同的体形,路面等因素.</string>
    <string name="step_length">步长:</string>
    <string name="cm">厘米</string>
    <string name="setp_length_info_1">为估算行走的距离和速度，请输入步长</string>
    <string name="setp_length_info_2">(得出的速度和距离较为粗略，仅供参考)</string>
    <string name="weigth">体重:</string>
    <string name="kg">公斤</string>
    <string name="weight_info">为计算消耗的热量(卡路里)，请入体重。</string>
    <string name="save">保存</string>
    <string name="cancle">取消</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_step_counter">StepCounterActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="datepicker">DatePicker</string>
    <string name="timepicker">TimePicker</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_test1">test1</string>


    <string name="notification_subtitle">Counting your steps</string>

    <string name="started">Pedometer started.</string>
    <string name="stopped">Pedometer stopped.</string>

    <string name="steps">步数</string>
    <string name="kilometers">千米</string>
    <string name="miles">英里</string>
    <string name="steps_per_minute">步 / 分</string>
    <string name="kilometers_per_hour">千米 / 小时</string>
    <string name="miles_per_hour">英里 / 小时</string>
    <string name="calories_burned">卡路里</string>
    <string name="centimeters">厘米</string>
    <string name="inches">英尺</string>
    <string name="kilograms">千克</string>
    <string name="pounds">磅</string>

    <string name="desired_pace">Desired pace:</string>
    <string name="desired_speed">Desired speed:</string>


    <string name="resume">继续</string>
    <string name="reset">重置</string>

    <!-- Settings -->
    <string name="settings">设置</string>
    <string name="activity_settings">计步设置</string>
    <string name="steps_settings_title">基本设置</string>
    <string name="sensitivity_setting">灵敏度</string>
    <string name="sensitivity_setting_details">调整设备的灵敏度</string>
    <string name="sensitivity_setting_title">选择合适的灵敏度级别</string>
    <string name="extra_high">9</string>
    <string name="very_high">8</string>
    <string name="higher">6</string>
    <string name="medium">5</string>
    <string name="lower">4</string>
    <string name="very_low">2</string>
    <string name="extra_low">1</string>
    <string name="operation_level_setting">模式</string>
    <string name="operation_level_setting_details">选择Your RunStone 的工作模式</string>
    <string name="operation_level_setting_title">选择工作模式</string>
    <string name="run_in_background">普通(工作在后台)</string>
    <string name="keep_screen_on">屏幕常亮</string>
    <string name="wake_up">强制常亮</string>
    <string name="units_setting">单位</string>
    <string name="units_setting_details">miles or kilometer</string>
    <string name="units_setting_title">选择单位</string>
    <string name="units_metric">千米</string>
    <string name="units_imperial">英里</string>
    <string name="step_length_setting">步长</string>
    <string name="step_length_setting_details">一步的长度</string>
    <string name="step_length_setting_title">Enter your step length</string>
    <string name="body_weight_setting">体重</string>
    <string name="body_weight_setting_details">For calorie calculation</string>
    <string name="body_weight_setting_title">Enter your body weight</string>
    <string name="exercise_type_setting">锻炼模式</string>
    <string name="exercise_type_setting_details">For calorie calculation</string>
    <string name="exercise_type_setting_title">Choose exercise type</string>
    <string name="exercise_type_running">running</string>
    <string name="exercise_type_walking">walking</string>
    <string name="maintain_setting">Maintain pace/speed</string>
    <string name="maintain_setting_details">Maintaining a desired a pace/speed</string>
    <string name="maintain_setting_title">Maintain:</string>
    <string name="maintain_nothing">nothing</string>
    <string name="maintain_pace">pace</string>
    <string name="maintain_speed">speed</string>
    <string name="voice_settings_title">Voice</string>
    <string name="voice_setting">Speak</string>
    <string name="voice_setting_details">Enable/disable voice notification</string>
    <string name="speaking_interval_setting">Interval</string>
    <string name="speaking_interval_setting_details">Voice notification interval</string>
    <string name="interval_15_seconds">15 seconds</string>
    <string name="interval_30_seconds">30 seconds</string>
    <string name="interval_1_minute">1 minute</string>
    <string name="interval_2_minutes">2 minutes</string>
    <string name="interval_5_minutes">5 minutes</string>
    <string name="interval_10_minutes">10 minutes</string>
    <string name="tell_what">What to tell</string>
    <string name="tell_steps_setting">Steps</string>
    <string name="tell_steps_setting_details"></string>
    <string name="tell_pace_setting">Pace</string>
    <string name="tell_pace_setting_details">steps / minute</string>
    <string name="tell_distance_setting">Distance</string>
    <string name="tell_distance_setting_details">kilometers or miles</string>
    <string name="tell_speed_setting">Speed</string>
    <string name="tell_speed_setting_details">km/h or mph</string>
    <string name="tell_calories_setting">Calories burned</string>
    <string name="tell_calories_setting_details"></string>
    <string name="tell_fasterslower_setting">Faster/slower</string>
    <string name="tell_fasterslower_setting_details">Helps you maintain your desired pace or speed (interval doesn\'t apply)</string>
    <string name="incorrect_step_length">Incorrect step length format! Go to the Settings to change it!</string>

    <string name="quit">退出</string>
</resources>
